[gd_scene load_steps=3 format=3 uid="uid://c3kbiihchfh61"]

[ext_resource type="Texture2D" uid="uid://nuc670g4s0d7" path="res://assets/star.png" id="1"]
[ext_resource type="Script" path="res://src/ui/level-control/LevelControl.gd" id="2"]

[node name="LevelControl" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.742
anchor_bottom = 0.273
offset_right = -0.240051
offset_bottom = 0.559998
script = ExtResource("2")

[node name="Stars" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
alignment = 1

[node name="Star1" type="TextureRect" parent="Stars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1")
stretch_mode = 6

[node name="Star2" type="TextureRect" parent="Stars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1")
stretch_mode = 6

[node name="Star3" type="TextureRect" parent="Stars"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1")
stretch_mode = 6

[node name="LevelControl" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PrevLevel" type="Button" parent="LevelControl"]
layout_mode = 2
text = "<"

[node name="VSeparator" type="VSeparator" parent="LevelControl"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelButton" type="Button" parent="LevelControl"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
text = "level 12"

[node name="VSeparator2" type="VSeparator" parent="LevelControl"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="NextLevel" type="Button" parent="LevelControl"]
layout_mode = 2
text = ">"

[connection signal="visibility_changed" from="." to="." method="_on_LevelControl_visibility_changed"]
[connection signal="pressed" from="LevelControl/PrevLevel" to="." method="_on_PrevLevel_pressed"]
[connection signal="pressed" from="LevelControl/LevelButton" to="." method="_on_LevelButton_pressed"]
[connection signal="pressed" from="LevelControl/NextLevel" to="." method="_on_NextLevel_pressed"]
